# AlphaEngine

./: .gitignore  CMakeLists.txt  README.md
Alpha/: CMakeLists.txt
Alpha/src/: main.cpp
AlphaEngine/: CMakeLists.txt
AlphaEngine/Source/EngineFramework/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Delegate.h  Event.h  EventBus.h  FileSystem.h  GameplayEvents.h  Geometry.h  Input.cpp  Input.h  InputEvents.h  Intersection.cpp  Intersection.h  Layer.h  Logger.cpp  Logger.h  MainContactListener.h  Mesh.h  ModelLoader.cpp  ModelLoader.h  PhysicsLayers.h  ServiceLocator.h  Shader.cpp  Shader.h  Utility.h  Window.cpp  Window.h  WindowEvents.h
AlphaEngine/Source/EngineFramework/Components/: CameraComponent.h  PlayerControllerComponent.h  RendererComponent.h  RigidBodyComponent.h  TransformComponent.h  VelocityComponent.h
AlphaEngine/Source/EngineFramework/ECS/: ECS.cpp  ECS.h
AlphaEngine/Source/EngineFramework/Renderer/: IRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h
AlphaEngine/Source/EngineFramework/Systems/: CameraSystem.h  MovementSystem.h  PhysicsSystem.h  PlayerControllerSystem.h  RenderSystem.h
AlphaGame/: CMakeLists.txt
AlphaGame/Assets/Models/: CubeBox.glb  TestingGolfComplexModel.glb  floor.glb
AlphaGame/Shaders/: Basic.glsl  Basic_Instancing.glsl  Fresnel.glsl  Skybox.glsl
AlphaGame/Source/GameFramework/: AppLayer.cpp  AppLayer.h  Main.cpp  UILayer.cpp  UILayer.h
Architecture/: AlphaEngine.drawio  AlphaEngineV0.0.2.drawio  AlphaEngineV0.0.3.drawio  AlphaEngineV0.0.4.drawio
Blender_Model/Balls/: BaseGolfBall.blend  SimpleSkin.blend  SimpleSkin.blend1  basicGulfModelMap.blend
Build_TestPROJECTA/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Alpha.slnx  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters
Build_TestPROJECTA/AlphaEngine/: AlphaEngine.vcxproj  AlphaEngine.vcxproj.filters  cmake_install.cmake
Build_TestPROJECTA/AlphaEngine/AlphaEngine.dir/Debug/: AlphaEngine.lib.recipe  Application.cpp.ifc.dt.d.json  Application.cpp.ifc.dt.module.json  Application.cpp.ifc.dt.module.json.command  Application.h_875078723E5E2BB4.ifc.dt.d.json  Application.h_875078723E5E2BB4.ifc.dt.module.json  Application.h_875078723E5E2BB4.ifc.dt.module.json.command  AssetManager.cpp.ifc.dt.d.json  AssetManager.cpp.ifc.dt.module.json  AssetManager.cpp.ifc.dt.module.json.command  AssetManager.h_6D306BA018CD3985.ifc.dt.d.json  AssetManager.h_6D306BA018CD3985.ifc.dt.module.json  AssetManager.h_6D306BA018CD3985.ifc.dt.module.json.command  CameraComponent.h_7C90375E6AB98670.ifc.dt.d.json  CameraComponent.h_7C90375E6AB98670.ifc.dt.module.json  CameraComponent.h_7C90375E6AB98670.ifc.dt.module.json.command  CameraSystem.h_4FC2E7BD8850E0E.ifc.dt.d.json  CameraSystem.h_4FC2E7BD8850E0E.ifc.dt.module.json  CameraSystem.h_4FC2E7BD8850E0E.ifc.dt.module.json.command  ECS.cpp.ifc.dt.d.json  ECS.cpp.ifc.dt.module.json  ECS.cpp.ifc.dt.module.json.command  ECS.h_B4FCB992F8830B52.ifc.dt.d.json  ECS.h_B4FCB992F8830B52.ifc.dt.module.json  ECS.h_B4FCB992F8830B52.ifc.dt.module.json.command  Event.h_E5606104A66DBE42.ifc.dt.d.json  Event.h_E5606104A66DBE42.ifc.dt.module.json  Event.h_E5606104A66DBE42.ifc.dt.module.json.command  EventBus.h_B15946B1646A02A4.ifc.dt.d.json  EventBus.h_B15946B1646A02A4.ifc.dt.module.json  EventBus.h_B15946B1646A02A4.ifc.dt.module.json.command  IRenderer.h_3A0EACCADD6C444D.ifc.dt.d.json  IRenderer.h_3A0EACCADD6C444D.ifc.dt.module.json  IRenderer.h_3A0EACCADD6C444D.ifc.dt.module.json.command  InputEvents.h_F233C582345133EF.ifc.dt.d.json  InputEvents.h_F233C582345133EF.ifc.dt.module.json  InputEvents.h_F233C582345133EF.ifc.dt.module.json.command  Layer.h_33BDCF9A91FD6957.ifc.dt.d.json  Layer.h_33BDCF9A91FD6957.ifc.dt.module.json  Layer.h_33BDCF9A91FD6957.ifc.dt.module.json.command  (+39 more)
Build_TestPROJECTA/AlphaEngine/AlphaEngine.dir/Debug/AlphaEngine.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
Build_TestPROJECTA/AlphaEngine/AlphaEngine.dir/Debug/AlphaEngine_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
Build_TestPROJECTA/AlphaGame/: AlphaGame.vcxproj  AlphaGame.vcxproj.filters  cmake_install.cmake
Build_TestPROJECTA/AlphaGame/AlphaGame.dir/Debug/: .d.json  AlphaGame.exe.recipe  AppLayer.cpp.ifc.dt.module.json  AppLayer.cpp.ifc.dt.module.json.command  AppLayer.h_FA38AF889DC8CB9A.ifc.dt.d.json  AppLayer.h_FA38AF889DC8CB9A.ifc.dt.module.json  AppLayer.h_FA38AF889DC8CB9A.ifc.dt.module.json.command  Main.cpp.ifc.dt.d.json  Main.cpp.ifc.dt.module.json  Main.cpp.ifc.dt.module.json.command  UILayer.cpp.ifc.dt.d.json  UILayer.cpp.ifc.dt.module.json  UILayer.cpp.ifc.dt.module.json.command  UILayer.h_B2DA1E61658C09C9.ifc.dt.d.json  UILayer.h_B2DA1E61658C09C9.ifc.dt.module.json  UILayer.h_B2DA1E61658C09C9.ifc.dt.module.json.command  applayer.cpp.module.json  main.cpp.module.json  uilayer.cpp.module.json
Build_TestPROJECTA/AlphaGame/AlphaGame.dir/Debug/AlphaGame.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Build_TestPROJECTA/AlphaGame/AlphaGame.dir/Debug/AlphaGame_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
Build_TestPROJECTA/Debug/: glad.lib
Build_TestPROJECTA/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Build_TestPROJECTA/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+1 more)
(+8 files in other folders)
